# Openschool-Management

./: .eslintrc.js  CODE_STRUCTURE.md  FILE_STRUCTURE.md  Final-Local-Run.md  INSTALLATION.md  MVP-README.md  QUICK_START.md  README.md  SETUP_GUIDE.md  comprehensive-school-saas.md  docker-compose.local.yml  docker-compose.yml  final-local-run.md  jest.config.js  jest.setup.js  next.config.js  nginx.conf  package-lock.json  package.json  prometheus.yml  run.sh  setup-dev.sh  setup.sh  tailwind.config.js
backend/: API_DOCUMENTATION.md  Dockerfile  README.md  alembic.ini  chool_db  pyproject.toml  requirements.txt  school.db
backend/alembic/: env.py
backend/alembic/versions/: 52a0f3c9f127_initial_schema.py
backend/app/: initial_setup.py  main.py  worker.py
backend/app/api/: deps.py  docs.py
backend/app/core/: audit.py  auth.py  cache.py  celery_app.py  config.py  database.py  deps.py  errors.py  logger.py  middleware.py  monitoring.py  realtime.py  redis.py  security.py  storage.py  websocket.py
backend/app/crud/: __init__.py  academic.py  school.py  student.py  tenant.py  timetable.py  user.py
backend/app/db/: base_class.py  init_db.py  session.py  utils.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  academic_core.py  academic_timetable.py  all_models.py  audit.py  base.py  configure.py  enums.py  fee.py  relationships.py  saas.py  school.py  student.py  tenant.py  user.py
backend/app/schemas/: __init__.py  academic.py  attendance.py  auth.py  base.py  dashboard.py  fee.py  saas.py  school.py  student.py  tenant.py  timetable.py  user.py
backend/app/scripts/: create_admin.py  create_saas_superadmin.py  create_superuser.py  init_db.py  run_tests.py  seed_data.py
backend/app/services/: academic.py  attendance.py  auth.py  fee.py  notifications.py  portal.py  saas.py  saas_auth.py  (+2 more)
backend/scripts/: create_superuser.py
backend/tests/: conftest.py  test_academic.py  test_auth.py  test_fees.py  test_main.py  test_portal.py
(+161 files in other folders)
